--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
   
   <title>QR code component</title>
 
-  <!-- aqui va tus CSS 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
   <div class="attribution">
-    Autor del ejercicio <a href="#">Tu nombre aquí</a>.
+    Autor del ejercicio <a href="#">Miguel Ángel Timoté</a>.
+  </div>
+  <div class ="chart">
+    <img
+    src ="./images/image-qr-code.png"
+    width="245"
+    height="245"/>
+    <div>
+      <H3>Improve your front-end skills by building projects</H3>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+    
   </div>
 </body>
 </html>
